changed var names

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1>Computing Power: <span id="powerCount">0</span></h1>
-    <button id="computeBtn">Generate Power</button>
-    <button id="buyUpgradeBtn">Buy Upgrade (Cost: <span id="upgradeCost">10</span>)</button>
+    <button id="computeBtn">Generate Compute</button>
+    <button id="buyUpgradeBtn">Upgrade Processing Power (Cost: <span id="upgradeCost">10</span>)</button>
     <script src="script.js"></script>
 </body>
 </html>
