--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 </head>
 <body>
     <h1>Computing Power: <span id="powerCount">0</span></h1>
-    <button id="computeBtn">Generate Compute</button>
-    <button id="buyUpgradeBtn">Upgrade Processing Power (Cost: <span id="upgradeCost">10</span>)</button>
+    <button id="genComputeButton">Generate Compute</button>
+    <button id="genComputeUpgradeButton">Improve Source Code (Cost: <span id="compUpgradeBtn">10</span>)</button>
+    <button id="buyBasicScript">Basic Script (Cost: <span id="basicScriptBtn">100</span>)</button>
     <script src="script.js"></script>
 </body>
 </html>
