--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <h1>Computing Power: <span id="powerCount">0</span></h1>
     <button id="genComputeButton">Generate Compute</button>
     <button id="genComputeUpgradeButton">Improve Source Code (Cost: <span id="compUpgradeBtn">10</span>)</button>
-    <button id="buyBasicScript">Basic Script (Cost: <span id="basicScriptBtn">100</span>)</button>
+    <button id="buyBasicScript">Basic Script (Cost: <span id="basicScriptBtn">10</span>)</button>
+    <button id="buyOptimizedScripts">Advanced Script (Cost: <span id="optimizedScriptsBtn">100</span>)</button>
     <script src="script.js"></script>
 </body>
 </html>
