seperated obj into upgrades and bots, trying to add compute/s

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Computing Power: <span id="powerCount">0</span></h1>
+    <h2>Compute/s: <span id="computePerSec">0</span></h2>
     <button id="genComputeButton">Generate Compute</button>
     <button id="genComputeUpgradeButton">Improve Source Code (Cost: <span id="compUpgradeBtn">10</span>)</button>
     <button id="buyBasicScript">Basic Script (Cost: <span id="basicScriptBtn">10</span>)</button>
